[project]
name = "tranay"
version = "0.0.1"
description = "AI Data Analysis MCP & Studio"
authors = [
  {name = "Sitong Yang", email = "sitong10301@gmail.com"},
]
maintainers = [
  {name = "Sitong Yang", email = "sitong10301@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.17",
    "cryptography>=44.0.2",
    "duckdb>=1.2.1",
    "fastmcp>=0.4.1",
    "flask[async]>=3.1.1",
    "function-schema>=0.4.5",
    "kaleido==0.2.1",
    "mistune>=3.1.3",
    "openai>=1.82.1",
    "openai-agents>=0.0.16",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "platformdirs>=4.3.7",
    "plotly[express]>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pymysql>=1.1.1",
    "python-lsp-server>=1.12.2",
    "python-slugify>=8.0.4",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
    "tomli-w>=1.2.0",
    "werkzeug>=3.1.3",
    "pymongo==4.13.2",
]

[project.scripts]
tranay_mcp = "tranay.mcp:main"
tranay_studio = "tranay.studio:main"


[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
    "six>=1.16.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "brand*", "debug*"]
include = ["tranay*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[dependency-groups]
dev = []
